# eve-engine

./: .gitignore  CMakeLists.txt  LICENSE  README.md
assets/models/: demo_cube.stl  emitter_sphere.stl
assets/textures/: checker.ppm
examples/CubeExample/: CubeExample.hpp  main.cpp
examples/deformable/: main.cpp
examples/draw_overlay/: main.cpp
examples/dust_cube/: main.cpp
examples/emitting_bodies/: main.cpp
examples/glass/: main.cpp
examples/gpu_collision/: main.cpp
examples/in_app_console/: main.cpp
examples/lattice/: main.cpp
examples/lights/: main.cpp
examples/materials/: main.cpp
examples/molecular_dynamics/: main.cpp
examples/nbody/: main.cpp
examples/particles/: main.cpp
examples/physics/: main.cpp
examples/post_processing/: CMakeLists.txt  main.cpp
examples/reflections/: main.cpp
examples/shader_styles/: main.cpp
examples/sky_image_background/: main.cpp
examples/terminal_app/: main.cpp
examples/texture_gen/: main.cpp
examples/volumetric_fog/: main.cpp
examples/window_features/: main.cpp
include/: NBodyGpuInterop.hpp  VulkanCubeApp.hpp  VulkanRenderer.hpp
include/core/: ParallelFor.hpp  PipelineLibrary.hpp  RenderData.hpp  Vertex.hpp  VulkanCubeApp.hpp  VulkanRenderer.hpp  WindowManager.hpp
include/core/ecs/: Components.hpp  EcsExtensions.hpp  Entity.hpp  Registry.hpp
include/core/filesystem/: FileSystem.hpp
include/core/primitives/: PrimitiveGenerator.hpp
include/core/sky/: Sky.hpp
include/core/units/: MetricUnits.hpp
include/engine/: Animation.hpp  AssetPipeline.hpp  Audio.hpp  CameraSystem.hpp  Colliders.hpp  DebugTools.hpp  DeformableBody.hpp  GameEngine.hpp  GpuCollisionSystem.hpp  GpuCollisionTypes.hpp  HeadlessCapture.hpp  IGameEngine.hpp  IRenderer.hpp  InputManager.hpp  InputTypes.hpp  JobSystem.hpp  Material.hpp  MolecularDynamics.hpp  Network.hpp  ParticleSystem.hpp  PeriodicTable.hpp  PhysicsConstants.hpp  PhysicsDetail.hpp  PhysicsSystem.hpp  PostProcessing.hpp  Serialization.hpp  SoftBodyVolume.hpp  UISystem.hpp
include/engine/assets/: ImageWriter.hpp  MeshLoader.hpp  TextureGenerator.hpp  TextureLoader.hpp
include/ui/: CustomUi.hpp  Draw.hpp  FontLibrary.hpp  ImGuiLayer.hpp  Mouse.hpp  Ui.hpp
shaders/: cube.frag  cube.vert  glow.frag  gradient.frag  heat.frag  nbody.comp  particle.frag  particle.vert  particle_billboard.comp  rim.frag  shadow.vert  toon.frag  wireframe.frag
shaders/compute/: collision_bitonic_sort.comp  collision_broad_phase.comp  collision_broad_phase_write.comp  collision_narrow_phase.comp  collision_pair_gen.comp  collision_prefix_sum.comp
shaders/graphics/: cube.frag  glow.frag  gradient.frag  heat.frag  particle.frag  rim.frag  toon.frag  wireframe.frag
shaders/post/: bloom_blur.frag  bloom_composite.frag  bloom_extract.frag  blur.frag  blur.frag.spv  color_grading.frag  dof.frag  fullscreen.vert  fxaa.frag  motion_blur.frag  ssao.frag  ssao_blur.frag  taa.frag  tonemapping.frag  vignette_chromatic.frag
shaders/shadow/: cascade_shadow.frag  cascade_shadow.vert  shadow_sample.glsl
src/core/: PipelineLibrary.cpp  Vertex.cpp  VulkanRenderer.Ui.cpp  VulkanRenderer.cpp  WindowManager.cpp
src/core/filesystem/: FileSystem.cpp
src/core/primitives/: PrimitiveGenerator.cpp
src/core/sky/: Sky.cpp
src/core/units/: MetricUnits.cpp
src/engine/: Animation.cpp  AssetPipeline.cpp  Audio.cpp  CameraSystem.cpp  Colliders.cpp  DebugTools.cpp  DeformableBody.cpp  GameEngine.cpp  GpuCollisionSystem.cpp  InputManager.cpp  JobSystem.cpp  Material.cpp  MolecularDynamics.cpp  Network.cpp  ParticleSystem.cpp  PhysicsSystem.cpp  PostProcessing.cpp  Serialization.cpp  SoftBodyVolume.cpp  UISystem.cpp
src/engine/assets/: ImageWriter.cpp  MeshLoader.cpp  StbImage.cpp  TextureGenerator.cpp  TextureLoader.cpp
src/ui/: CustomUi.cpp  Draw.cpp  FontLibrary.cpp  ImGuiLayer.cpp  Mouse.cpp  Ui.cpp
tests/: CMakeLists.txt  test_main.cpp  test_physics.cpp  test_rendering.cpp  test_rendering_headless.cpp  test_rendering_performance.cpp  test_texture_generator.cpp
